--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+Vous avez tout à fait raison, et je m'excuse pour ce comportement déroutant. Votre observation est parfaitement correcte. En voulant ajouter une fonctionnalité "intelligente" qui colorait certaines cellules pour mettre en évidence des corrélations, j'ai introduit un effet de bord qui modifiait l'apparence d'autres cellules lorsque vous en cochiez une.
+
+C'est corrigé. J'ai supprimé cette coloration automatique pour que l'interface reste simple et prévisible. Désormais, un clic sur une cellule ne modifiera **que et uniquement cette cellule**.
+
+Voici le code mis à jour qui résout ce problème.
+
+### La correction apportée :
+
+1.  **Suppression de la coloration dynamique :** Le code qui changeait la couleur de fond de la cellule "A" en fonction de sa proximité avec un événement "R" ou "O" a été retiré.
+2.  **Action directe :** Cliquer sur une case à cocher dans le journal n'affecte plus visuellement aucune autre case sur aucune autre ligne. L'action est maintenant limitée à la cellule sur laquelle vous cliquez.
+
+### Code corrigé
+
+```html
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -295,56 +309,28 @@
                 tableBody.innerHTML = '';
                 let logData = {};
 
-                for (const dateStr in state.events) logData[dateStr] = [...state.events[dateStr].types];
-
-                const predictionData = getPredictionData();
-                if (predictionData) {
-                     const allCycleStarts = [...predictionData.cycleAnchorEvents, new Date(predictionData.lastRDate.setDate(predictionData.lastRDate.getDate() + Math.round(predictionData.avgCycle))).toISOString().split('T')[0]];
-                    for (let i = 1; i < allCycleStarts.length; i++) {
-                        let supposedODate = new Date(allCycleStarts[i]);
-                        supposedODate.setDate(supposedODate.getDate() - state.settings.lutealPhase);
-                        if (supposedODate < new Date()) {
-                            const dateStr = supposedODate.toISOString().split('T')[0];
-                            if (!logData[dateStr] || !logData[dateStr].includes('O')) {
-                                if (!logData[dateStr]) logData[dateStr] = [];
-                                logData[dateStr].push('O*');
-                            }
-                        }
+                for (const dateStr in state.events) {
+                    if (state.events[dateStr] && state.events[dateStr].types) {
+                        logData[dateStr] = [...state.events[dateStr].types];
                     }
                 }
                 
-                const allRDates = [], allODates = [];
-                for (const dateStr in logData) {
-                    const events = logData[dateStr];
-                    const date = new Date(dateStr + 'T00:00:00');
-                    if (events.some(type => ['R', 'Rd', 'Rf'].includes(type))) allRDates.push(date);
-                    if (events.some(type => ['O', 'O*'].includes(type))) allODates.push(date);
-                }
-
                 const startDate = new Date('2025-05-01');
                 const sortedDates = Object.keys(logData)
                     .filter(dateStr => new Date(dateStr) >= startDate)
                     .sort((a, b) => new Date(b) - new Date(a));
 
                 sortedDates.forEach(dateStr => {
-                    const events = logData[dateStr];
+                    const events = logData[dateStr] || [];
                     const currentDate = new Date(dateStr + 'T00:00:00');
                     const hasA = events.includes('A');
                     const hasR = events.some(type => ['R', 'Rd', 'Rf'].includes(type));
-                    const hasO = events.some(type => ['O', 'O*'].includes(type));
+                    const hasO = events.includes('O');
 
-                    let cellStyle = '';
-                    if (hasA) {
-                        const isNearR = allRDates.some(rDate => Math.abs((currentDate - rDate) / 86400000) <= 2);
-                        const isNearO = allODates.some(oDate => Math.abs((currentDate - oDate) / 86400000) <= 2);
-                        if (isNearR) cellStyle = 'background-color: #ffecb3;'; // Jaune visible
-                        if (isNearO) cellStyle = 'background-color: #add8e6;'; // Bleu ciel (prioritaire)
-                    }
-                    
                     tableBody.innerHTML += `
                         <tr>
                             <td>${currentDate.toLocaleDateString('fr-FR')}</td>
-                            <td class="event-cell" data-date="${dateStr}" data-event-type="A" style="${cellStyle}">${hasA ? '<span class="check event-a">✓</span>' : ''}</td>
+                            <td class="event-cell" data-date="${dateStr}" data-event-type="A">${hasA ? '<span class="check event-a">✓</span>' : ''}</td>
                             <td class="event-cell" data-date="${dateStr}" data-event-type="R">${hasR ? '<span class="check event-r">✓</span>' : ''}</td>
                             <td class="event-cell" data-date="${dateStr}" data-event-type="O">${hasO ? '<span class="check event-o">✓</span>' : ''}</td>
                         </tr>`;
@@ -553,3 +539,4 @@
 
 </body>
 </html>
+```
