--- a/index.html
+++ b/index.html
@@ -140,7 +140,12 @@
                 <button class="nav-btn" data-view="settings">Paramètres</button>
             </nav>
 
-            <div id="dashboard-view" class="content-view"><div id="predictions-container" class="predictions-container"></div></div>
+            <div id="dashboard-view" class="content-view">
+                <div class="dashboard-actions" style="text-align: center; margin-bottom: 15px;">
+                     <button id="refresh-dashboard-btn" class="btn" style="width: auto; padding: 10px 20px;">🔄 Actualiser les calculs</button>
+                </div>
+                <div id="predictions-container" class="predictions-container"></div>
+            </div>
             <div id="calendar-view" class="content-view hidden"><div id="calendar-header"><button id="prev-month">◄</button><span id="month-year"></span><button id="next-month">►</button></div><div class="calendar-grid" id="day-names"></div><div class="calendar-grid" id="calendar-days"></div></div>
             <div id="journal-view" class="content-view hidden"><table id="journal-table"><thead><tr><th>Date</th><th>A</th><th>R</th><th>O</th></tr></thead><tbody></tbody></table></div>
             <div id="settings-view" class="content-view hidden">
@@ -289,8 +294,6 @@
                     const futurePredictions = [];
                     const lastRDateObj = new Date(lastRDate);
 
-                    // CORRECTION: La boucle calcule maintenant chaque prédiction à partir de la dernière date réelle,
-                    // et non à partir de la prédiction précédente.
                     for (let i = 1; i <= 4; i++) {
                         let predictedR = new Date(lastRDateObj);
                         predictedR.setDate(predictedR.getDate() + Math.round(avgCycle * i));
@@ -509,6 +512,16 @@
                 $('#prev-month').addEventListener('click', () => { state.currentDate.setMonth(state.currentDate.getMonth() - 1); renderCalendar(); });
                 $('#next-month').addEventListener('click', () => { state.currentDate.setMonth(state.currentDate.getMonth() + 1); renderCalendar(); });
                 
+                // NOUVEL ÉVÉNEMENT pour le bouton d'actualisation
+                $('#refresh-dashboard-btn').addEventListener('click', () => {
+                    renderDashboard();
+                    const btn = $('#refresh-dashboard-btn');
+                    btn.textContent = 'Calculs à jour !';
+                    setTimeout(() => {
+                        btn.textContent = '🔄 Actualiser les calculs';
+                    }, 1500);
+                });
+
                 $('#add-peak-dates-btn').addEventListener('click', addPeakDates);
 
                 $('#add-r-event').addEventListener('click', () => { saveDayData('R'); closeDayModal(); });
@@ -588,4 +601,3 @@
 
 </body>
 </html>
-```
